--- a/p10 - Data Science Trends For 2020/p10_data_science_trends_for_2020.ipynb
+++ b/p10 - Data Science Trends For 2020/p10_data_science_trends_for_2020.ipynb
@@ -1193,15 +1193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Task 9.4\n",
-    "\n",
-    "Decide on an adequate time frame and track interest in deep learning across that time frame:\n",
-    "- a. Count how many deep learning questions are asked per time period.\n",
-    "- b. The total amount of questions per time period.\n",
-    "- c. How many deep learning questions there are, relative to the total amount of questions per time period;\n",
-    "    \n",
-    "\n",
-    "Since the number of observations in the data set is lengthy, going back as much as 2014, one can try to condense them into a broader time frame, converting `CreationDate` into a quarterly time series."
+    "Since the number of observations in the data set is lengthy, going back as much as 2014, one can try to condense them into a broader time frame, converting `CreationDate` into a quarterly time series.\n"
    ]
   },
   {
