--- a/p14 - Building a Spam Filter with Naive Bayes /p14_building_a_spam_filter_with_a_naive_bayes_algorithm.ipynb
+++ b/p14 - Building a Spam Filter with Naive Bayes /p14_building_a_spam_filter_with_a_naive_bayes_algorithm.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "init_cell": true
    },
@@ -1424,10 +1424,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Putting Up All Parts Together - Building The Spam Filter And Assessing Its Effectiveness\n",
+    "## Putting Up All The Parts Together - Assembling The Spam Filter And Assessing Its Effectiveness\n",
     "\n",
     "---\n",
     "\n",
