--- a/p10 - Data Science For 2020 - Obtaining Insights From The Data Science Stack Exchange Platform/p10_data_science_trends_for_2020.ipynb
+++ b/p10 - Data Science For 2020 - Obtaining Insights From The Data Science Stack Exchange Platform/p10_data_science_trends_for_2020.ipynb
@@ -6,13 +6,12 @@
     "collapsed": true
    },
    "source": [
-    "# Data Science Trends For 2020 - What Can The Data Science Stack Exchange Database Tell Us About The Most Sought After Topics In This Field? \n",
+    "# Data Science For 2020 - Obtaining Insights From The Data Science Stack Exchange Platform\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "## Introduction\n",
     "---\n",
+    "\n",
     "From the Dataquest's tutorial:\n",
     "\n",
     "\n",
@@ -259,13 +258,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
     "import re\n",
     "\n",
-    "# Reading the file:\n",
     "posts = pd.read_csv('2019_questions.csv')"
    ]
   },
@@ -726,29 +723,26 @@
     "\n",
     "plt.title('Most Used Vs Most Viewed Tags - Top 20 Tags')\n",
     "\n",
-    "ax1 = ax.bar(most_used_pct.index,\n",
-    "             most_used_pct,\n",
-    "             label='Most Used')\n",
+    "ax1 = ax.bar(\n",
+    "    most_used_pct.index,\n",
+    "    most_used_pct,\n",
+    "    label='Most Used'\n",
+    ")\n",
     "\n",
-    "ax2 = ax.bar(most_viewed_pct.index,\n",
-    "             most_viewed_pct,\n",
-    "             color='y',\n",
-    "             align='center',\n",
-    "             alpha=0.5,\n",
-    "             label='Most Viewed')\n",
+    "ax2 = ax.bar(\n",
+    "    most_viewed_pct.index,\n",
+    "    most_viewed_pct,\n",
+    "    color='y',\n",
+    "    align='center',\n",
+    "    alpha=0.5,\n",
+    "    label='Most Viewed'\n",
+    ")\n",
     "\n",
     "plt.legend()\n",
-    "\n",
     "plt.ylabel('%')\n",
-    "\n",
-    "# Rotating X-axis labels\n",
     "plt.xticks(rotation=90)\n",
-    "\n",
-    "\n",
-    "\n",
     "ax.grid(axis='y')\n",
     "ax.set_axisbelow(True)\n",
-    "\n",
     "plt.tight_layout()\n",
     "\n",
     "plt.show()"
@@ -1025,22 +1019,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "related = set(['machine-learning',\n",
-    "           'deep-learning',\n",
-    "           'neural-network',\n",
-    "           'keras',\n",
-    "           'classification',\n",
-    "           'tensorflow',\n",
-    "           'scikit-learn',\n",
-    "           'cnn',\n",
-    "           'nlp',\n",
-    "           'lstm',\n",
-    "           'machine-learning-model',\n",
-    "           'pytorch',\n",
-    "           'predictive-modelling'])\n",
+    "related = set(\n",
+    "    [\n",
+    "        'machine-learning',\n",
+    "        'deep-learning',\n",
+    "        'neural-network',\n",
+    "        'keras',\n",
+    "        'classification',\n",
+    "        'tensorflow',\n",
+    "        'scikit-learn',\n",
+    "        'cnn',\n",
+    "        'nlp',\n",
+    "        'lstm',\n",
+    "        'machine-learning-model',\n",
+    "        'pytorch',\n",
+    "        'predictive-modelling'\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "# `set(x).isdisjoint(related)` is `False` if both sets share at least one element.\n",
-    "all_questions['dl_related_wide'] = all_questions['Tags'].apply(lambda x: 1 if  set(x).isdisjoint(related)==False else 0)"
+    "all_questions['dl_related_wide'] = (\n",
+    "    all_questions['Tags']\n",
+    "    .apply(lambda x: 1 if set(x).isdisjoint(related) == False else 0)\n",
+    ")"
    ]
   },
   {
@@ -1232,12 +1233,13 @@
     "group_quarterly_narrow = related_narrow.groupby(by='quarterly_data').size()\n",
     "group_quarterly_wide = related_wide.groupby(by='quarterly_data').size()\n",
     "\n",
-    "compare_quarterly = pd.concat([group_quarterly_all,\n",
-    "                               group_quarterly_narrow,\n",
-    "                               group_quarterly_wide],\n",
-    "                               axis=1).rename(columns={0: 'All Questions',\n",
-    "                                                       1: 'Deep-learning',\n",
-    "                                                       2: 'Machine-learning'})\n",
+    "compare_quarterly = (\n",
+    "    pd.concat(\n",
+    "        [group_quarterly_all, group_quarterly_narrow, group_quarterly_wide],\n",
+    "        axis=1\n",
+    "    )\n",
+    "    .rename(columns={0: 'All Questions', 1: 'Deep-learning',  2: 'Machine-learning'})\n",
+    ")\n",
     "\n",
     "compare_quarterly['Deep-learning %'] =\\\n",
     "    round((compare_quarterly['Deep-learning']*100)/compare_quarterly['All Questions'], 2)\n",
@@ -1494,11 +1496,12 @@
    "source": [
     "fig, (ax1, ax2) = plt.subplots(1,2, figsize=(14, 6))\n",
     "\n",
-    "\n",
     "#### ax1\n",
     "\n",
-    "ax1.set_title('Evolution Of Answers Associated To Deep-leaning \\n And To Machine-Learning',\n",
-    "              y=1.05)\n",
+    "ax1.set_title(\n",
+    "    'Evolution Of Answers Associated To Deep-leaning \\n And To Machine-Learning',\n",
+    "    y=1.05\n",
+    ")\n",
     "\n",
     "compare_quarterly['All Questions'].plot(ax=ax1, legend=True)\n",
     "\n",
@@ -1506,26 +1509,27 @@
     "\n",
     "compare_quarterly['Machine-learning'].plot(ax=ax1, legend=True, c='orange')\n",
     "\n",
-    "ax1.set_ylabel('Nr. Of Questions',\n",
-    "               rotation=90)\n",
+    "ax1.set_ylabel('Nr. Of Questions', rotation=90)\n",
+    "\n",
     "ax1.grid()\n",
     "\n",
     "\n",
     "#### ax2\n",
     "\n",
-    "ax2.set_title('Deep-leaning Vs Machine-Learning Questions (Normalized)',\n",
-    "              y=1.05)\n",
+    "ax2.set_title(\n",
+    "    'Deep-leaning Vs Machine-Learning Questions (Normalized)', \n",
+    "    y=1.05\n",
+    ")\n",
     "\n",
     "compare_quarterly['Deep-learning %'].plot(ax=ax2, legend=True, c='green')\n",
     "\n",
     "compare_quarterly['Machine-learning %'].plot(ax=ax2, legend=True, c='orange')\n",
     "\n",
-    "ax2.set_ylabel('% of Total Questions ',\n",
-    "               rotation=90)\n",
+    "ax2.set_ylabel('% of Total Questions ', rotation=90)\n",
     "\n",
     "ax2.grid()\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
