--- a/p13 - Lottery Addiction - Helping Lottery Buyers Understanding Their Chances Of Winning It/p13_mobile_app_for_lottery_addiction.ipynb
+++ b/p13 - Lottery Addiction - Helping Lottery Buyers Understanding Their Chances Of Winning It/p13_mobile_app_for_lottery_addiction.ipynb
@@ -4,19 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mobile App For Lottery Addiction - Helping Lottery Buyers Understanding Their Chances Of Winning It\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Lottery Addiction - Helping Lottery Buyers Understanding Their Chances Of Winning It\n",
+    "\n",
+    "\n",
     "## Introduction\n",
     "---\n",
     "\n",
     "From Dataquest: \n",
     "\n",
-    ">A medical institute that aims to prevent and treat gambling addictions wants to build a dedicated mobile app to help lottery addicts better estimate their chances of winning. The institute has a team of engineers that will build the app, but they need us to create the logical core of the app and calculate probabilities.\n",
+    ">\"A medical institute that aims to prevent and treat gambling addictions wants to build a dedicated mobile app to help lottery addicts better estimate their chances of winning. The institute has a team of engineers that will build the app, but they need us to create the logical core of the app and calculate probabilities.\n",
     "For the first version of the app, they want us to focus on the 6/49 lottery and build functions that enable users to answer questions like:\n",
     ">\n",
     ">\n",
@@ -29,7 +25,18 @@
     ">   - What is the probability of having at least five (or four, or three, or two) winning numbers on a single ticket?\n",
     ">\n",
     ">\n",
-    ">The institute also wants us to consider historical data coming from the national [6/49](https://en.wikipedia.org/wiki/Lotto_6/49) lottery game in Canada. The data set has data for 3,665 drawings, dating from 1982 to 2018 (...)."
+    ">The institute also wants us to consider historical data coming from the national [6/49](https://en.wikipedia.org/wiki/Lotto_6/49) lottery game in Canada. The data set has data for 3,665 drawings, dating from 1982 to 2018 (...).\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -66,15 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import re\n",
-    "\n",
-    "\n",
     "def factorial(n):\n",
     "    \n",
     "    factorial_n = n\n",
@@ -84,14 +86,13 @@
     "\n",
     "    return factorial_n\n",
     "\n",
-    "\n",
     "def combinations(n, k):\n",
     "    return int((1 / factorial(k)) * (factorial(n) / factorial(n - k)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,11 +146,12 @@
     "        print(error_spec[0])\n",
     "        return\n",
     "\n",
-    "    conditions = [isinstance(bet, list),\n",
-    "                  all([type(el) == int for el in bet]),\n",
-    "                  len(bet)==k,\n",
-    "                  all([el in range(1, 49+1) for el in bet]),\n",
-    "                  len(bet) == len(set(bet))]  \n",
+    "    conditions = [\n",
+    "        isinstance(bet, list),\n",
+    "        all([type(el) == int for el in bet]),\n",
+    "        len(bet)==k,\n",
+    "        all([el in range(1, 49+1) for el in bet]),\n",
+    "        len(bet) == len(set(bet))]  \n",
     "    \n",
     "    \n",
     "    # If every input condition is met:\n",
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +198,7 @@
        "'The probability of winning the lottery with the inserted bet is 0.000007%.'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +594,7 @@
        "4              47            45  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +679,7 @@
        "Name: all_winning_bets, Length: 3665, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
