--- a/p14 - Building A Spam Filter Based On A Naive Bayes Algorithm/p14_building_a_spam_filter_based_on_a_naive_bayes_algorithm.ipynb
+++ b/p14 - Building A Spam Filter Based On A Naive Bayes Algorithm/p14_building_a_spam_filter_based_on_a_naive_bayes_algorithm.ipynb
@@ -4,14 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Building A Spam Filter With Naive Bayes Algorithm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Building A Spam Filter Based On A Naive Bayes Algorithm\n",
+    "\n",
     "## Introduction\n",
+    "---\n",
     "\n",
     "This project aims at creating a spam filter that resorts to a multinomial Naive Bayes algorithm in order to distinguish spam messages from regular ones. The filter will be tested on a data set comprised of 5572 messages that have been previously determined by humans as spam or not spam.\n",
     "\n",
@@ -37,13 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Data Set and the Algorithm's Structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## The Data Set and the Algorithm's Structure\n",
+    "---\n",
+    "\n",
     "The data set."
    ]
   },
@@ -53,9 +45,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sms_spam_full = pd.read_csv('SMSSpamCollection.txt',\n",
-    "                   sep='\\t',\n",
-    "                   names=['Label', 'SMS'])"
+    "sms_spam_full = pd.read_csv(\n",
+    "    'SMSSpamCollection.txt',\n",
+    "    sep='\\t',\n",
+    "    names=['Label', 'SMS']\n",
+    ")"
    ]
   },
   {
@@ -292,8 +286,10 @@
    "source": [
     "eighty_perc = random_sms_spam.shape[0] * 0.8\n",
     "\n",
-    "print(f'Total number of messages/rows in random_sms_spam: {random_sms_spam.shape[0]}', \n",
-    "      f'\\n80% of total messages/rows in random_sms_spam: {round(eighty_perc, 0)}')"
+    "print(\n",
+    "    f'Total number of messages/rows in random_sms_spam: {random_sms_spam.shape[0]}', \n",
+    "    f'\\n80% of total messages/rows in random_sms_spam: {round(eighty_perc, 0)}'\n",
+    ")"
    ]
   },
   {
@@ -396,9 +392,13 @@
     "\n",
     "\n",
     "# Combining all label percentage counts for comparison.\n",
-    "compare_label = pd.DataFrame({'random_sms_spam': count_label,\n",
-    "                              'count_label_training': count_label_training,\n",
-    "                              'count_label_testing': count_label_testing})\n",
+    "compare_label = pd.DataFrame(\n",
+    "    {\n",
+    "        'random_sms_spam': count_label,\n",
+    "        'count_label_training': count_label_training,\n",
+    "        'count_label_testing': count_label_testing\n",
+    "    }\n",
+    ")\n",
     "\n",
     "compare_label"
    ]
@@ -1205,8 +1205,10 @@
     "n_spam = sms_spam.sum(axis=1).sum()\n",
     "n_ham = sms_ham.sum(axis=1).sum()\n",
     "\n",
-    "print(f'n_spam: {n_spam}',\n",
-    "     f'\\nn_ham: {n_ham}')"
+    "print(\n",
+    "    f'n_spam: {n_spam}',\n",
+    "    f'\\nn_ham: {n_ham}'\n",
+    ")"
    ]
   },
   {
@@ -1424,7 +1426,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1486,7 +1487,6 @@
    "outputs": [],
    "source": [
     "testing_set['Test'] = testing_set['SMS'].apply(classify_test_set)\n",
-    "\n",
     "\n",
     "# Assigns True if condition is met and multplying by one converts True in '1' and False in '0'.\n",
     "testing_set['Correct'] = (testing_set['Label'] == testing_set['Test'])*1"
@@ -1636,6 +1636,7 @@
    "metadata": {},
    "source": [
     "## Extra Task\n",
+    "---\n",
     "\n",
     "### Isolate the 14 messages that were classified incorrectly and try to figure out why the algorithm reached the wrong conclusion."
    ]
@@ -2026,6 +2027,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
