- Project 13: replaced bitwise by comparison operator: `&` for `and`.

--- a/p13 - Lottery Addiction - Helping Lottery Buyers Understanding Their Chances Of Winning It/p13_lottery_addiction _helping_lottery_buyers_understanding_their_chances_of_winning_it.ipynb
+++ b/p13 - Lottery Addiction - Helping Lottery Buyers Understanding Their Chances Of Winning It/p13_lottery_addiction _helping_lottery_buyers_understanding_their_chances_of_winning_it.ipynb
@@ -162,7 +162,7 @@
     "        print(common_error_statement)\n",
     "        print('Error specification:')\n",
     "\n",
-    "        if (conditions[2] == False) & (type(bet)==list):\n",
+    "        if (conditions[2] == False) and (type(bet)==list):\n",
     "            error_spec[2] += f' {len(bet)} were inserted.'\n",
     "\n",
     "        for index, cond in enumerate(conditions):\n",
@@ -1004,7 +1004,7 @@
    "source": [
     "def probability_less_6(i):\n",
     "    \n",
-    "    if (i in range(1, 5+1)) & (isinstance(i, int)):\n",
+    "    if (i in range(1, 5+1)) and (isinstance(i, int)):\n",
     "        dividend = combinations(6, i) * combinations(43, 6 - i)\n",
     "\n",
     "        divisor = combinations(49, 6) \n",
